# placeholders

./: README.md  bump_push_pub.bat  pub.bat
bullshit/: Cargo.toml  README.md
meaningless/: Cargo.toml  README.md
nonsense/: Cargo.toml  README.md
template/: Cargo.toml  README.md
