[package]
name = "bullshit"
authors = ["29 <791603901@qq.com>"]
version = "0.2.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["placeholder", "bullshit"]
categories = ["development-tools"]
repository = "https://github.com/czy-29/placeholders/tree/main/bullshit"
homepage = "https://github.com/czy-29/placeholders/tree/main/bullshit"
documentation = "https://docs.rs/bullshit"
description = """
Some placeholder rust crates.
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
