[package]
name = "meaningless"
authors = ["29 <791603901@qq.com>"]
version = "0.3.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["placeholder", "meaningless"]
categories = ["development-tools"]
repository = "https://github.com/czy-29/placeholders/tree/main/meaningless"
homepage = "https://github.com/czy-29/placeholders/tree/main/meaningless"
documentation = "https://docs.rs/meaningless"
description = """
Some placeholder rust crates.
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
