[package]
name = "nonsense"
authors = ["29 <791603901@qq.com>"]
version = "0.2.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["placeholder", "nonsense"]
categories = ["development-tools"]
repository = "https://github.com/czy-29/placeholders/tree/main/nonsense"
homepage = "https://github.com/czy-29/placeholders/tree/main/nonsense"
documentation = "https://docs.rs/nonsense"
description = """
Some placeholder rust crates.
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
