[package]
name = "template"
authors = ["29 <791603901@qq.com>"]
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["placeholder", "template"]
categories = ["development-tools"]
repository = "https://github.com/czy-29/placeholders/tree/main/template"
homepage = "https://github.com/czy-29/placeholders/tree/main/template"
documentation = "https://docs.rs/template"
description = """
Some placeholder rust crates.
"""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
